added a convar for enabling/disabling world models for gloves

--- a/cfg/sourcemod/gloves.cfg
+++ b/cfg/sourcemod/gloves.cfg
@@ -26,4 +26,7 @@ sm_gloves_float_increment_size "0.2"
 // Default: ""
 sm_gloves_table_prefix ""
 
-
+// Enable/Disable gloves to be seen by other living players
+// -
+// Default: "1"
+sm_gloves_enable_world_model "1"
