config files for the newly released clutch case

--- a/addons/sourcemod/configs/gloves/gloves_spanish.cfg
+++ b/addons/sourcemod/configs/gloves/gloves_spanish.cfg
@@ -3,6 +3,26 @@
 	"Guantes Bloodhound"
 	{
 		"index"			"5027"
+		"Emerald"
+		{
+			"index"		"10057"
+			"team"		"2;3"
+		}
+		"Mangrove"
+		{
+			"index"		"10058"
+			"team"		"2;3"
+		}
+		"Rattler"
+		{
+			"index"		"10059"
+			"team"		"2;3"
+		}
+		"Case Hardened"
+		{
+			"index"		"10060"
+			"team"		"2;3"
+		}
 		"Chamuscado"
 		{
 			"index"		"10006"
@@ -27,6 +47,26 @@
 	"Guantes de deporte"
 	{
 		"index"			"5030"
+		"Amphibious"
+		{
+			"index"		"10045"
+			"team"		"2;3"
+		}
+		"Bronze Morph"
+		{
+			"index"		"10046"
+			"team"		"2;3"
+		}
+		"Omega"
+		{
+			"index"		"10047"
+			"team"		"2;3"
+		}
+		"Vice"
+		{
+			"index"		"10048"
+			"team"		"2;3"
+		}
 		"Laberinto de setos"
 		{
 			"index"		"10038"
@@ -51,6 +91,26 @@
 	"Vendas de cuero"
 	{
 		"index"			"5032"
+		"Cobalt Skulls"
+		{
+			"index"		"10053"
+			"team"		"2;3"
+		}
+		"Overprint"
+		{
+			"index"		"10054"
+			"team"		"2;3"
+		}
+		"Duct Tape"
+		{
+			"index"		"10055"
+			"team"		"2;3"
+		}
+		"Arboreal"
+		{
+			"index"		"10056"
+			"team"		"2;3"
+		}
 		"Cuero"
 		{
 			"index"		"10009"
@@ -75,6 +135,26 @@
 	"Guantes de conductor"
 	{
 		"index"			"5031"
+		"King Snake"
+		{
+			"index"		"10041"
+			"team"		"2;3"
+		}
+		"Imperial Plaid"
+		{
+			"index"		"10042"
+			"team"		"2;3"
+		}
+		"Overtake"
+		{
+			"index"		"10043"
+			"team"		"2;3"
+		}
+		"Racing Green"
+		{
+			"index"		"10044"
+			"team"		"2;3"
+		}
 		"Entrelazado lunar"
 		{
 			"index"		"10013"
@@ -99,6 +179,26 @@
 	"Guantes de especialista"
 	{
 		"index"			"5034"
+		"Crimson Web"
+		{
+			"index"		"10061"
+			"team"		"2;3"
+		}
+		"Buckshot"
+		{
+			"index"		"10062"
+			"team"		"2;3"
+		}
+		"Fade"
+		{
+			"index"		"10063"
+			"team"		"2;3"
+		}
+		"Mogul"
+		{
+			"index"		"10064"
+			"team"		"2;3"
+		}
 		"DDPAT de bosque"
 		{
 			"index"		"10030"
@@ -123,6 +223,26 @@
 	"Guantes de motorista"
 	{
 		"index"			"5033"
+		"POW!"
+		{
+			"index"		"10049"
+			"team"		"2;3"
+		}
+		"Turtle"
+		{
+			"index"		"10050"
+			"team"		"2;3"
+		}
+		"Transport"
+		{
+			"index"		"10051"
+			"team"		"2;3"
+		}
+		"Polygon"
+		{
+			"index"		"10052"
+			"team"		"2;3"
+		}
 		"Eclipse"
 		{
 			"index"		"10024"
