added Hydra Gloves (Operation Hydra logo difference only)

--- a/addons/sourcemod/configs/gloves/gloves_ukrainian.cfg
+++ b/addons/sourcemod/configs/gloves/gloves_ukrainian.cfg
@@ -1,5 +1,49 @@
 "Gloves"
 {
+	"Hydra Gloves"
+	{
+		"index"			"5035"
+		"Emerald"
+		{
+			"index"		"10057"
+			"team"		"2;3"
+		}
+		"Mangrove"
+		{
+			"index"		"10058"
+			"team"		"2;3"
+		}
+		"Rattler"
+		{
+			"index"		"10059"
+			"team"		"2;3"
+		}
+		"Case Hardened"
+		{
+			"index"		"10060"
+			"team"		"2;3"
+		}
+		"Charred"
+		{
+			"index"		"10006"
+			"team"		"2;3"
+		}
+		"Snakebite"
+		{
+			"index"		"10007"
+			"team"		"2;3"
+		}
+		"Bronzed"
+		{
+			"index"		"10008"
+			"team"		"2;3"
+		}
+		"Guerrilla"
+		{
+			"index"		"10039"
+			"team"		"2;3"
+		}
+	}
 	"Рукавиці «Дойда»"
 	{
 		"index"			"5027"
