updated readme file

--- a/cfg/sourcemod/gloves.cfg
+++ b/cfg/sourcemod/gloves.cfg
@@ -3,8 +3,8 @@
 
 // Prefix for chat messages
 // -
-// Default: "[wasdzone]"
-sm_gloves_chat_prefix "[wasdzone]"
+// Default: "[oyunhost.net]"
+sm_gloves_chat_prefix "[oyunhost.net]"
 
 // Database connection name in databases.cfg to use
 // -
