Fully translated into Russian

--- a/addons/sourcemod/configs/gloves/gloves_russian.cfg
+++ b/addons/sourcemod/configs/gloves/gloves_russian.cfg
@@ -1,44 +1,44 @@
 "Gloves"
 {
-	"Hydra Gloves"
+	"Перчатки «Гидра»"
 	{
 		"index"			"5035"
-		"Emerald"
+		"Изумруд"
 		{
 			"index"		"10057"
 			"team"		"2;3"
 		}
-		"Mangrove"
+		"Мангры"
 		{
 			"index"		"10058"
 			"team"		"2;3"
 		}
-		"Rattler"
+		"Гремучая змея"
 		{
 			"index"		"10059"
 			"team"		"2;3"
 		}
-		"Case Hardened"
+		"Поверхностная закалка"
 		{
 			"index"		"10060"
 			"team"		"2;3"
 		}
-		"Charred"
+		"Зола"
 		{
 			"index"		"10006"
 			"team"		"2;3"
 		}
-		"Snakebite"
+		"Укус змеи"
 		{
 			"index"		"10007"
 			"team"		"2;3"
 		}
-		"Bronzed"
+		"Бронза"
 		{
 			"index"		"10008"
 			"team"		"2;3"
 		}
-		"Guerrilla"
+		"Диверсант"
 		{
 			"index"		"10039"
 			"team"		"2;3"
@@ -47,22 +47,22 @@
 	"Перчатки «Бладхаунд»"
 	{
 		"index"			"5027"
-		"Emerald"
+		"Изумруд"
 		{
 			"index"		"10057"
 			"team"		"2;3"
 		}
-		"Mangrove"
+		"Мангры"
 		{
 			"index"		"10058"
 			"team"		"2;3"
 		}
-		"Rattler"
+		"Гремучая змея"
 		{
 			"index"		"10059"
 			"team"		"2;3"
 		}
-		"Case Hardened"
+		"Поверхностная закалка"
 		{
 			"index"		"10060"
 			"team"		"2;3"
@@ -91,22 +91,22 @@
 	"Спортивные перчатки"
 	{
 		"index"			"5030"
-		"Amphibious"
+		"Амфибия"
 		{
 			"index"		"10045"
 			"team"		"2;3"
 		}
-		"Bronze Morph"
+		"Окисление бронзы"
 		{
 			"index"		"10046"
 			"team"		"2;3"
 		}
-		"Omega"
+		"Омега"
 		{
 			"index"		"10047"
 			"team"		"2;3"
 		}
-		"Vice"
+		"Порок"
 		{
 			"index"		"10048"
 			"team"		"2;3"
@@ -135,22 +135,22 @@
 	"Обмотки рук"
 	{
 		"index"			"5032"
-		"Cobalt Skulls"
+		"Синие черепа"
 		{
 			"index"		"10053"
 			"team"		"2;3"
 		}
-		"Overprint"
+		"Оттиск"
 		{
 			"index"		"10054"
 			"team"		"2;3"
 		}
-		"Duct Tape"
+		"Скотч"
 		{
 			"index"		"10055"
 			"team"		"2;3"
 		}
-		"Arboreal"
+		"Лес"
 		{
 			"index"		"10056"
 			"team"		"2;3"
@@ -179,22 +179,22 @@
 	"Водительские перчатки"
 	{
 		"index"			"5031"
-		"King Snake"
+		"Королевский змей"
 		{
 			"index"		"10041"
 			"team"		"2;3"
 		}
-		"Imperial Plaid"
+		"Имперская клетка"
 		{
 			"index"		"10042"
 			"team"		"2;3"
 		}
-		"Overtake"
+		"Обгон"
 		{
 			"index"		"10043"
 			"team"		"2;3"
 		}
-		"Racing Green"
+		"Гоночный зелёный"
 		{
 			"index"		"10044"
 			"team"		"2;3"
@@ -223,22 +223,22 @@
 	"Перчатки спецназа"
 	{
 		"index"			"5034"
-		"Crimson Web"
+		"Кровавая паутина"
 		{
 			"index"		"10061"
 			"team"		"2;3"
 		}
-		"Buckshot"
+		"Дробь"
 		{
 			"index"		"10062"
 			"team"		"2;3"
 		}
-		"Fade"
+		"Градиент"
 		{
 			"index"		"10063"
 			"team"		"2;3"
 		}
-		"Mogul"
+		"Покоритель гор"
 		{
 			"index"		"10064"
 			"team"		"2;3"
@@ -267,22 +267,22 @@
 	"Мотоциклетные перчатки"
 	{
 		"index"			"5033"
-		"POW!"
+		"БУХ!"
 		{
 			"index"		"10049"
 			"team"		"2;3"
 		}
-		"Turtle"
+		"Черепаха"
 		{
 			"index"		"10050"
 			"team"		"2;3"
 		}
-		"Transport"
+		"Транспорт"
 		{
 			"index"		"10051"
 			"team"		"2;3"
 		}
-		"Polygon"
+		"Полигон"
 		{
 			"index"		"10052"
 			"team"		"2;3"
@@ -292,7 +292,7 @@
 			"index"		"10024"
 			"team"		"2;3"
 		}
-		"Бах!"
+		"БУХ!"
 		{
 			"index"		"10027"
 			"team"		"2;3"
