added all gloves from Glove Set 3 (Broken Fang)

--- a/addons/sourcemod/configs/gloves/gloves_english.cfg
+++ b/addons/sourcemod/configs/gloves/gloves_english.cfg
@@ -1,5 +1,29 @@
 "Gloves"
 {
+	"Broken Fang Gloves"
+	{
+		"index"			"4725"
+		"Jade"
+		{
+			"index"		"10085"
+			"team"		"2;3"
+		}
+		"Yellow-banded"
+		{
+			"index"		"10086"
+			"team"		"2;3"
+		}
+		"Unhinged"
+		{
+			"index"		"10088"
+			"team"		"2;3"
+		}
+		"Needle Point"
+		{
+			"index"		"10087"
+			"team"		"2;3"
+		}
+	}
 	"Hydra Gloves"
 	{
 		"index"			"5035"
@@ -91,6 +115,26 @@
 	"Sport Gloves"
 	{
 		"index"			"5030"
+		"Slingshot"
+		{
+			"index"		"10073"
+			"team"		"2;3"
+		}
+		"Big Game"
+		{
+			"index"		"10074"
+			"team"		"2;3"
+		}
+		"Scarlet Shamagh"
+		{
+			"index"		"10075"
+			"team"		"2;3"
+		}
+		"Nocts"
+		{
+			"index"		"10076"
+			"team"		"2;3"
+		}
 		"Amphibious"
 		{
 			"index"		"10045"
@@ -135,6 +179,26 @@
 	"Hand Wraps"
 	{
 		"index"			"5032"
+		"CAUTION!"
+		{
+			"index"		"10084"
+			"team"		"2;3"
+		}
+		"Giraffe"
+		{
+			"index"		"10082"
+			"team"		"2;3"
+		}
+		"Desert Shamagh"
+		{
+			"index"		"10081"
+			"team"		"2;3"
+		}
+		"Constrictor"
+		{
+			"index"		"10083"
+			"team"		"2;3"
+		}
 		"Cobalt Skulls"
 		{
 			"index"		"10053"
@@ -179,6 +243,26 @@
 	"Driver Gloves"
 	{
 		"index"			"5031"
+		"Snow Leopard"
+		{
+			"index"		"10070"
+			"team"		"2;3"
+		}
+		"Rezan the Red"
+		{
+			"index"		"10069"
+			"team"		"2;3"
+		}
+		"Black Tie"
+		{
+			"index"		"10072"
+			"team"		"2;3"
+		}
+		"Queen Jaguar"
+		{
+			"index"		"10071"
+			"team"		"2;3"
+		}
 		"King Snake"
 		{
 			"index"		"10041"
@@ -223,6 +307,31 @@
 	"Specialist Gloves"
 	{
 		"index"			"5034"
+		"Marble Fade"
+		{
+			"index"		"10065"
+			"team"		"2;3"
+		}
+		"Lt. Commander"
+		{
+			"index"		"10066"
+			"team"		"2;3"
+		}
+		"Tiger Strike"
+		{
+			"index"		"10067"
+			"team"		"2;3"
+		}
+		"Field Agent"
+		{
+			"index"		"10068"
+			"team"		"2;3"
+		}
+		"Crimson Web"
+		{
+			"index"		"10061"
+			"team"		"2;3"
+		}
 		"Crimson Web"
 		{
 			"index"		"10061"
@@ -267,6 +376,26 @@
 	"Moto Gloves"
 	{
 		"index"			"5033"
+		"Blood Pressure"
+		{
+			"index"		"10079"
+			"team"		"2;3"
+		}
+		"Smoke Out"
+		{
+			"index"		"10078"
+			"team"		"2;3"
+		}
+		"Finish Line"
+		{
+			"index"		"10077"
+			"team"		"2;3"
+		}
+		"3rd Commando Company"
+		{
+			"index"		"10080"
+			"team"		"2;3"
+		}
 		"POW!"
 		{
 			"index"		"10049"
