--- a/addons/sourcemod/configs/gloves/gloves_schinese.cfg
+++ b/addons/sourcemod/configs/gloves/gloves_schinese.cfg
@@ -1,44 +1,68 @@
 "Gloves"
 {
-	"Hydra Gloves"
+	"狂牙手套"
+	{
+		"index"			"4725"
+		"翡翠"
+		{
+			"index"		"10085"
+			"team"		"2;3"
+		}
+		"黄色斑纹"
+		{
+			"index"		"10086"
+			"team"		"2;3"
+		}
+		"精神错乱"
+		{
+			"index"		"10088"
+			"team"		"2;3"
+		}
+		"针尖"
+		{
+			"index"		"10087"
+			"team"		"2;3"
+		}
+	}	
+	"九头蛇手套"
 	{
 		"index"			"5035"
-		"Emerald"
+		"翡翠色调"
 		{
 			"index"		"10057"
 			"team"		"2;3"
 		}
-		"Mangrove"
+		"红树林"
 		{
 			"index"		"10058"
 			"team"		"2;3"
 		}
-		"Rattler"
+		"响尾蛇"
 		{
 			"index"		"10059"
 			"team"		"2;3"
 		}
-		"Case Hardened"
+		"表面淬火"
 		{
 			"index"		"10060"
 			"team"		"2;3"
 		}
-		"Charred"
+		"焦炭"
 		{
 			"index"		"10006"
 			"team"		"2;3"
 		}
-		"Snakebite"
+		"蛇咬"
 		{
 			"index"		"10007"
 			"team"		"2;3"
 		}
-		"Bronzed"
+		"染铜"
 		{
 			"index"		"10008"
 			"team"		"2;3"
 		}
-		"Guerrilla"
+		"游击队"
 		{
 			"index"		"10039"
 			"team"		"2;3"
@@ -47,22 +71,22 @@
 	"血猎手套"
 	{
 		"index"			"5027"
-		"Emerald"
+		"翡翠色调"
 		{
 			"index"		"10057"
 			"team"		"2;3"
 		}
-		"Mangrove"
+		"红树林"
 		{
 			"index"		"10058"
 			"team"		"2;3"
 		}
-		"Rattler"
+		"响尾蛇"
 		{
 			"index"		"10059"
 			"team"		"2;3"
 		}
-		"Case Hardened"
+		"表面淬火"
 		{
 			"index"		"10060"
 			"team"		"2;3"
@@ -91,22 +115,42 @@
 	"运动手套"
 	{
 		"index"			"5030"
-		"Amphibious"
+		"弹弓"
+		{
+			"index"		"10073"
+			"team"		"2;3"
+		}
+		"大型猎物"
+		{
+			"index"		"10074"
+			"team"		"2;3"
+		}
+		"猩红头巾"
+		{
+			"index"		"10075"
+			"team"		"2;3"
+		}
+		"夜行衣"
+		{
+			"index"		"10076"
+			"team"		"2;3"
+		}
+		"双栖"
 		{
 			"index"		"10045"
 			"team"		"2;3"
 		}
-		"Bronze Morph"
+		"青铜形态"
 		{
 			"index"		"10046"
 			"team"		"2;3"
 		}
-		"Omega"
+		"欧米伽"
 		{
 			"index"		"10047"
 			"team"		"2;3"
 		}
-		"Vice"
+		"迈阿密风云"
 		{
 			"index"		"10048"
 			"team"		"2;3"
@@ -132,25 +176,45 @@
 			"team"		"2;3"
 		}
 	}
-	"手部束带"
+	"裹手"
 	{
 		"index"			"5032"
-		"Cobalt Skulls"
+		"警告"
+		{
+			"index"		"10084"
+			"team"		"2;3"
+		}
+		"长颈鹿"
+		{
+			"index"		"10082"
+			"team"		"2;3"
+		}
+		"沙漠头巾"
+		{
+			"index"		"10081"
+			"team"		"2;3"
+		}
+		"蟒蛇"
+		{
+			"index"		"10083"
+			"team"		"2;3"
+		}
+		"钴蓝骷髅"
 		{
 			"index"		"10053"
 			"team"		"2;3"
 		}
-		"Overprint"
+		"套印"
 		{
 			"index"		"10054"
 			"team"		"2;3"
 		}
-		"Duct Tape"
+		"防水布胶带"
 		{
 			"index"		"10055"
 			"team"		"2;3"
 		}
-		"Arboreal"
+		"森林色调"
 		{
 			"index"		"10056"
 			"team"		"2;3"
@@ -179,22 +243,42 @@
 	"驾驶手套"
 	{
 		"index"			"5031"
-		"King Snake"
+		"雪豹"
+		{
+			"index"		"10070"
+			"team"		"2;3"
+		}
+		"绯红列赞"
+		{
+			"index"		"10069"
+			"team"		"2;3"
+		}
+		"西装革履"
+		{
+			"index"		"10072"
+			"team"		"2;3"
+		}
+		"美洲豹女王"
+		{
+			"index"		"10071"
+			"team"		"2;3"
+		}
+		"王蛇"
 		{
 			"index"		"10041"
 			"team"		"2;3"
 		}
-		"Imperial Plaid"
+		"蓝紫格子"
 		{
 			"index"		"10042"
 			"team"		"2;3"
 		}
-		"Overtake"
+		"超越"
 		{
 			"index"		"10043"
 			"team"		"2;3"
 		}
-		"Racing Green"
+		"墨绿色调"
 		{
 			"index"		"10044"
 			"team"		"2;3"
@@ -223,22 +307,42 @@
 	"专业手套"
 	{
 		"index"			"5034"
-		"Crimson Web"
+		"渐变大理石"
+		{
+			"index"		"10065"
+			"team"		"2;3"
+		}
+		"陆军少尉长官"
+		{
+			"index"		"10066"
+			"team"		"2;3"
+		}
+		"老虎精英"
+		{
+			"index"		"10067"
+			"team"		"2;3"
+		}
+		"一线特工"
+		{
+			"index"		"10068"
+			"team"		"2;3"
+		}
+		"深红之网"
 		{
 			"index"		"10061"
 			"team"		"2;3"
 		}
-		"Buckshot"
+		"铅弹"
 		{
 			"index"		"10062"
 			"team"		"2;3"
 		}
-		"Fade"
+		"渐变之色"
 		{
 			"index"		"10063"
 			"team"		"2;3"
 		}
-		"Mogul"
+		"大腕"
 		{
 			"index"		"10064"
 			"team"		"2;3"
@@ -267,22 +371,42 @@
 	"摩托手套"
 	{
 		"index"			"5033"
-		"POW!"
+		"血压"
+		{
+			"index"		"10079"
+			"team"		"2;3"
+		}
+		"小心烟雾弹"
+		{
+			"index"		"10078"
+			"team"		"2;3"
+		}
+		"终点线"
+		{
+			"index"		"10077"
+			"team"		"2;3"
+		}
+		"第三特种兵连"
+		{
+			"index"		"10080"
+			"team"		"2;3"
+		}
+		"嘭！"
 		{
 			"index"		"10049"
 			"team"		"2;3"
 		}
-		"Turtle"
+		"玳瑁"
 		{
 			"index"		"10050"
 			"team"		"2;3"
 		}
-		"Transport"
+		"交运"
 		{
 			"index"		"10051"
 			"team"		"2;3"
 		}
-		"Polygon"
+		"多边形"
 		{
 			"index"		"10052"
 			"team"		"2;3"
