Updated translations - CS:GO Update Dec 18, 2020

--- a/addons/sourcemod/configs/gloves/gloves_finnish.cfg
+++ b/addons/sourcemod/configs/gloves/gloves_finnish.cfg
@@ -8,17 +8,17 @@
 			"index"		"10085"
 			"team"		"2;3"
 		}
-		"Yellow-banded"					// #PaintKit_operation10_poison_frog_black_yellow_tag
+		"Keltajuovainen"				// #PaintKit_operation10_poison_frog_black_yellow_tag
 		{
 			"index"		"10086"
 			"team"		"2;3"
 		}
-		"Unhinged"						// #PaintKit_operation10_snakeskin_black_tag
+		"Pitelemätön"					// #PaintKit_operation10_snakeskin_black_tag
 		{
 			"index"		"10088"
 			"team"		"2;3"
 		}
-		"Needle Point"					// #PaintKit_operation10_floral_tag
+		"Ristipisto"					// #PaintKit_operation10_floral_tag
 		{
 			"index"		"10087"
 			"team"		"2;3"
@@ -115,22 +115,22 @@
 	"Urheiluhanskat"					// #CSGO_Wearable_v_sporty_glove
 	{
 		"index"			"5030"
-		"Slingshot"						// #PaintKit_sporty_slingshot_tag
+		"Ritsa"							// #PaintKit_sporty_slingshot_tag
 		{
 			"index"		"10073"
 			"team"		"2;3"
 		}
-		"Big Game"						// #PaintKit_sporty_hunter_tag
+		"Metsästäjä"					// #PaintKit_sporty_hunter_tag
 		{
 			"index"		"10074"
 			"team"		"2;3"
 		}
-		"Scarlet Shamagh"				// #PaintKit_sporty_houndstooth_red_tag
+		"Tulipunainen shemagh"			// #PaintKit_sporty_houndstooth_red_tag
 		{
 			"index"		"10075"
 			"team"		"2;3"
 		}
-		"Nocts"							// #PaintKit_sporty_jaguar_tag
+		"Yönmustat"						// #PaintKit_sporty_jaguar_tag
 		{
 			"index"		"10076"
 			"team"		"2;3"
@@ -179,22 +179,22 @@
 	"Käsisiteet"						// #CSGO_Wearable_v_leather_handwrap
 	{
 		"index"			"5032"
-		"CAUTION!"						// #PaintKit_handwrap_leathery_caution_tag
+		"VAARA!"						// #PaintKit_handwrap_leathery_caution_tag
 		{
 			"index"		"10084"
 			"team"		"2;3"
 		}
-		"Giraffe"						// #PaintKit_handwrap_leathery_fabric_giraffe_tag
+		"Kirahvi"						// #PaintKit_handwrap_leathery_fabric_giraffe_tag
 		{
 			"index"		"10082"
 			"team"		"2;3"
 		}
-		"Desert Shamagh"				// #PaintKit_handwrap_fabric_houndstooth_orange_tag
+		"Aavikko-shemagh"				// #PaintKit_handwrap_fabric_houndstooth_orange_tag
 		{
 			"index"		"10081"
 			"team"		"2;3"
 		}
-		"Constrictor"					// #PaintKit_handwrap_leathery_snakeskin_orange_tag
+		"Kuristajakäärme"				// #PaintKit_handwrap_leathery_snakeskin_orange_tag
 		{
 			"index"		"10083"
 			"team"		"2;3"
@@ -243,7 +243,7 @@
 	"Ajohanskat"						// #CSGO_Wearable_v_slick_glove
 	{
 		"index"			"5031"
-		"Snow Leopard"					// #PaintKit_slick_jaguar_white_tag
+		"Lumileopardi"					// #PaintKit_slick_jaguar_white_tag
 		{
 			"index"		"10070"
 			"team"		"2;3"
@@ -253,12 +253,12 @@
 			"index"		"10069"
 			"team"		"2;3"
 		}
-		"Black Tie"						// #PaintKit_slick_stitched_black_white_tag
+		"Smokki"						// #PaintKit_slick_stitched_black_white_tag
 		{
 			"index"		"10072"
 			"team"		"2;3"
 		}
-		"Queen Jaguar"					// #PaintKit_slick_jaguar_yellow_tag
+		"Jaguaarikuningatar"			// #PaintKit_slick_jaguar_yellow_tag
 		{
 			"index"		"10071"
 			"team"		"2;3"
@@ -307,7 +307,7 @@
 	"Ammattilaishanskat"				// #CSGO_Wearable_v_specialist_glove
 	{
 		"index"			"5034"
-		"Marble Fade"					// #PaintKit_specialist_marble_fade_tag
+		"Marmorihäivytys"				// #PaintKit_specialist_marble_fade_tag
 		{
 			"index"		"10065"
 			"team"		"2;3"
@@ -317,7 +317,7 @@
 			"index"		"10066"
 			"team"		"2;3"
 		}
-		"Tiger Strike"					// #PaintKit_specialist_tiger_orange_tag
+		"Tiikeriraitainen"				// #PaintKit_specialist_tiger_orange_tag
 		{
 			"index"		"10067"
 			"team"		"2;3"
@@ -376,12 +376,12 @@
 			"index"		"10079"
 			"team"		"2;3"
 		}
-		"Smoke Out"						// #PaintKit_motorcycle_smoke_tag
+		"Savustaja"						// #PaintKit_motorcycle_smoke_tag
 		{
 			"index"		"10078"
 			"team"		"2;3"
 		}
-		"Finish Line"					// #PaintKit_motorcycle_checker_flag_blue_green_tag
+		"Maaliviiva"					// #PaintKit_motorcycle_checker_flag_blue_green_tag
 		{
 			"index"		"10077"
 			"team"		"2;3"
