Updated translations - CS:GO Update Dec 18, 2020

--- a/addons/sourcemod/configs/gloves/gloves_norwegian.cfg
+++ b/addons/sourcemod/configs/gloves/gloves_norwegian.cfg
@@ -1,6 +1,6 @@
 "Gloves"
 {
-	"Broken Fang Gloves"				// #CSGO_Wearable_t_studded_brokenfang_gloves
+	"Broken Fang-hansker"				// #CSGO_Wearable_t_studded_brokenfang_gloves
 	{
 		"index"			"4725"
 		"Jade"							// #PaintKit_operation10_metalic_green_tag
@@ -68,7 +68,7 @@
 			"team"		"2;3"
 		}
 	}
-	"Bloodhound Gloves"					// #CSGO_Wearable_t_studdedgloves
+	"Bloodhound-hansker"				// #CSGO_Wearable_t_studdedgloves
 	{
 		"index"			"5027"
 		"Emerald"						// #PaintKit_bloodhound_hydra_black_green_tag
@@ -112,7 +112,7 @@
 			"team"		"2;3"
 		}
 	}
-	"Sport Gloves"						// #CSGO_Wearable_v_sporty_glove
+	"Sportshansker"						// #CSGO_Wearable_v_sporty_glove
 	{
 		"index"			"5030"
 		"Slingshot"						// #PaintKit_sporty_slingshot_tag
@@ -240,7 +240,7 @@
 			"team"		"2;3"
 		}
 	}
-	"Driver Gloves"						// #CSGO_Wearable_v_slick_glove
+	"Kjørehansker"						// #CSGO_Wearable_v_slick_glove
 	{
 		"index"			"5031"
 		"Snow Leopard"					// #PaintKit_slick_jaguar_white_tag
@@ -304,7 +304,7 @@
 			"team"		"2;3"
 		}
 	}
-	"Specialist Gloves"					// #CSGO_Wearable_v_specialist_glove
+	"Spesialisthansker"					// #CSGO_Wearable_v_specialist_glove
 	{
 		"index"			"5034"
 		"Marble Fade"					// #PaintKit_specialist_marble_fade_tag
@@ -368,7 +368,7 @@
 			"team"		"2;3"
 		}
 	}
-	"Moto Gloves"						// #CSGO_Wearable_v_motorcycle_glove
+	"Motorsykkelhansker"				// #CSGO_Wearable_v_motorcycle_glove
 	{
 		"index"			"5033"
 		"Blood Pressure"				// #PaintKit_motorcycle_carbonfiber_red_tag
